mobile validation changes for vaxeer remarks on display of counts

--- a/src/main/webapp/app/entities/mobile-validation/mobile-validation-dialog.html
+++ b/src/main/webapp/app/entities/mobile-validation/mobile-validation-dialog.html
@@ -67,7 +67,7 @@ $(document).ready(function() {
                     <td>{{mobileValidation.mobilenumber}}</td>
                     <td>{{mobileValidation.activationDate}}</td>
                     <td>{{mobileValidation.customerName}}</td>
-                    <td>{{mobileValidation.colorCode}}</td>
+                    <td  ng-style="{'background-color':mobileValidation.colorcode}">{{mobileValidation.colorCode}}</td>
                     
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
