--- a/src/main/webapp/app/entities/mobile-validation/mobile-validations.html
+++ b/src/main/webapp/app/entities/mobile-validation/mobile-validations.html
@@ -76,6 +76,7 @@
                     <td>{{mobileValidation.countCategory3}}</td>
                     <td>{{mobileValidation.countCategory4}}</td>
                     <td>{{mobileValidation.countCategory5}}</td>
+                    <td>{{mobileValidation.sourcebox}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
