Mobile validation changes

--- a/src/main/webapp/app/entities/mobile-validation/mobile-validations.html
+++ b/src/main/webapp/app/entities/mobile-validation/mobile-validations.html
@@ -7,7 +7,13 @@
                 <button class="btn btn-primary" ui-sref="mobile-validation.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs-down" >
-                        Create new Mobile Validation
+                        1 st Level Segregation
+                    </span>
+                </button>
+                  <button class="btn btn-primary" ui-sref="mobile-validation.second" >
+                    <span class="glyphicon glyphicon-plus"></span>
+                    <span class="hidden-xs-down" >
+                       2nd Level Segregation
                     </span>
                 </button>
             </div>
