user change and final changes included

--- a/src/main/webapp/app/entities/scancaf/scancaf-detail.html
+++ b/src/main/webapp/app/entities/scancaf/scancaf-detail.html
@@ -8,6 +8,10 @@
         <dd>
             <span>{{vm.scancaf.sourcebox}}</span>
         </dd>
+        <dt><span>Category</span></dt>
+        <dd>
+            <span>{{vm.scancaf.category}}</span>
+        </dd>
         <dt><span>Category 1</span></dt>
         <dd>
             <span>{{vm.scancaf.category1}}</span>
@@ -83,6 +87,22 @@
         <dt><span>Caftype</span></dt>
         <dd>
             <span>{{vm.scancaf.caftype}}</span>
+        </dd>
+        <dt><span>Category Rv</span></dt>
+        <dd>
+            <span>{{vm.scancaf.categoryRv}}</span>
+        </dd>
+        <dt><span>Count Category Rv</span></dt>
+        <dd>
+            <span>{{vm.scancaf.countCategoryRv}}</span>
+        </dd>
+        <dt><span>Category NA</span></dt>
+        <dd>
+            <span>{{vm.scancaf.categoryNA}}</span>
+        </dd>
+        <dt><span>Count Category NA</span></dt>
+        <dd>
+            <span>{{vm.scancaf.countCategoryNA}}</span>
         </dd>
     </dl>
 
