--- a/src/main/webapp/app/entities/sourcebox/sourcebox-detail.html
+++ b/src/main/webapp/app/entities/sourcebox/sourcebox-detail.html
@@ -16,6 +16,10 @@
         <dd>
             <span>{{vm.sourcebox.createddate | date:'mediumDate'}}</span>
         </dd>
+        <dt><span>Vehical Number</span></dt>
+        <dd>
+            <span>{{vm.sourcebox.vehicalNumber}}</span>
+        </dd>
     </dl>
 
     <button type="submit"
