--- a/src/main/webapp/app/entities/sourcebox/sourcebox-dialog.html
+++ b/src/main/webapp/app/entities/sourcebox/sourcebox-dialog.html
@@ -35,6 +35,12 @@
                     </span>
                 </div>
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_vehicalNumber">Vehical Number</label>
+            <input type="text" class="form-control" name="vehicalNumber" id="field_vehicalNumber"
+                    ng-model="vm.sourcebox.vehicalNumber"
+                    />
+        </div>
 
     </div>
     <div class="modal-footer">
