--- a/src/main/webapp/app/entities/sourcebox/sourceboxes.html
+++ b/src/main/webapp/app/entities/sourcebox/sourceboxes.html
@@ -39,6 +39,7 @@
                     <th jh-sort-by="sourceboxname"><span>Sourceboxname</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="createduser"><span>Createduser</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="createddate"><span>Createddate</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="vehicalNumber"><span>Vehical Number</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -48,6 +49,7 @@
                     <td>{{sourcebox.sourceboxname}}</td>
                     <td>{{sourcebox.createduser}}</td>
                         <td>{{sourcebox.createddate | date:'mediumDate'}}</td>
+                    <td>{{sourcebox.vehicalNumber}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
