--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,6 +62,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/messageformat/messageformat.js"></script>
+    <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -99,6 +100,13 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/userchange/userchange-dialog.controller.js"></script>
+    <script src="app/entities/userchange/userchange-detail.controller.js"></script>
+    <script src="app/entities/userchange/userchange-delete-dialog.controller.js"></script>
+    <script src="app/entities/userchange/userchange.state.js"></script>
+    <script src="app/entities/userchange/userchange.service.js"></script>
+    <script src="app/entities/userchange/userchange.search.service.js"></script>
+    <script src="app/entities/userchange/userchange.controller.js"></script>
     <script src="app/entities/system/system-dialog.controller.js"></script>
     <script src="app/entities/system/system-detail.controller.js"></script>
     <script src="app/entities/system/system-delete-dialog.controller.js"></script>
@@ -120,6 +128,13 @@
     <script src="app/entities/sourcebox/sourcebox.service.js"></script>
     <script src="app/entities/sourcebox/sourcebox.search.service.js"></script>
     <script src="app/entities/sourcebox/sourcebox.controller.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation-dialog.controller.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation-detail.controller.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation-delete-dialog.controller.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation.state.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation.service.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation.search.service.js"></script>
+    <script src="app/entities/secondsegregation/secondsegregation.controller.js"></script>
     <script src="app/entities/scancaf/scancaf-dialog.controller.js"></script>
     <script src="app/entities/scancaf/scancaf-detail.controller.js"></script>
     <script src="app/entities/scancaf/scancaf-delete-dialog.controller.js"></script>
