--- a/src/main/webapp/app/entities/sourcebox/sourcebox-dialog.html
+++ b/src/main/webapp/app/entities/sourcebox/sourcebox-dialog.html
@@ -19,7 +19,7 @@
                     ng-model="vm.sourcebox.sourceboxname"
                     />
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label class="control-label" for="field_createduser">Createduser</label>
             <input type="text" class="form-control" name="createduser" id="field_createduser"
                     ng-model="vm.sourcebox.createduser"
@@ -33,7 +33,7 @@
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('createddate')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
-                </div>
+                </div> -->
         </div>
         <div class="form-group">
             <label class="control-label" for="field_vehicalNumber">Vehical Number</label>
